--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0",
     "zod": "^4.2.1",
     "zod-to-json-schema": "^3.25.0"
   },
